# cpp_cmake_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
examples/: CMakeLists.txt  example.cpp
include/mod1/: hello.h
src/: CMakeLists.txt  main.cpp
src/mod1/: CMakeLists.txt  hello.cpp
tests/: CMakeLists.txt  test_main.cpp
